--- a/test.yml
+++ b/test.yml
@@ -5,17 +5,6 @@
   connection: ssh
   vars:
     domain_zones:
-      - name: "mylabserver.com"
-        networks:
-          - "172.31"
-        reverse:
-          - "31.172"
-        name_servers:
-          - "ns1.first_zone.com"
-          - "ns2.first_zone.com"
-        hosts:
-          - name: "andynottingham2c"
-            ip: "172.31.22.124"
-            alias: "web"
+      - {name: "mylabserver.com", networks: "172.31", reverse: "31.172"}
   roles:
     - ns
