--- a/ns/defaults/main.yml
+++ b/ns/defaults/main.yml
@@ -1,6 +1,26 @@
 ---
 acls: []
 domain_zones:
-  - {name: "mylabserver.com", networks: "172.31", reverse: "31.172"}
-serial: "{{
-        ansible_date_time.epoch | int +1 }}"
+  - {
+      name: "mylabserver.com",
+      networks: "172.31",
+      reverse: "31.172",
+      type: "master",
+      slaves: [],
+      forwarders: [],
+    }
+  - {
+      name: "myfakeserver.com",
+      networks: "172.32",
+      reverse: "32.172",
+      type: "slave",
+      master: "172.31.0.1",
+      forwarders: [],
+    }
+
+bind_zone_ttl: "604800"
+bind_zone_refresh: "604800"
+bind_zone_retry: "86400"
+bind_zone_expire: "2419200"
+bind_zone_min_ttl: "604800"
+bind_zone_serial: "{{ ansible_date_time.epoch | int +1 }}"
