--- a/ns/tasks/bind_dnskeys.yml
+++ b/ns/tasks/bind_dnskeys.yml
@@ -1,4 +1,9 @@
 ---
+- name: Delete DNSSEC keys dirs if exist
+  file:
+    path: "{{ bind_zone_dir }}/keys/"
+    state: absent
+
 - name: Create DNSSEC keys dirs
   file:
     path: "{{ bind_zone_dir }}/keys/{{ item.name }}"
@@ -7,18 +12,20 @@
     group: "{{ bind_group }}"
     mode: 0755
   with_list: "{{ bind_domain_zones }}"
+  tags: dns
 
 - name: Create DNSSEC keys
   command: "dnssec-keygen -r /dev/urandom -a HMAC-MD5 -b 512 -n HOST {{ item.name }}"
   args:
     chdir: "{{ bind_zone_dir }}/keys/{{ item.name }}"
   with_list: "{{ bind_domain_zones }}"
+  tags: dns
 
 - name: Get DNSSEC key value
-  command: "grep Key /etc/bind/zones/keys/{{ item.name }}/K{{ item.name }}.*.private | awk '{print $2}'"
-  register: command_result
+  raw: "grep Key {{ bind_zone_dir}}keys/{{ item.name}}/K{{ item.name }}.*.private | awk '{print $2}'"
+  register: "raw"
   with_list: "{{ bind_domain_zones }}"
-- debug: var=command_result.stdout_lines
+  tags: dns
 
 - name: Write key secret to conf.options.keys
   template:
@@ -27,4 +34,4 @@
     owner: "{{ bind_owner }}"
     group: "{{ bind_group }}"
     mode: 0755
-  with_items: "{{ bind_dns_key_secret.results }}"
+  with_items: "{{ raw.results }}"
