--- a/ns/tasks/bind_apparmor.yml
+++ b/ns/tasks/bind_apparmor.yml
@@ -8,5 +8,15 @@
     - "{{ bind_zone_dir }} rw"
   tags: apparmor
 
+- name: Allow bind to write to custom log dir
+  lineinfile:
+    dest=/etc/apparmor.d/usr.sbin.named
+    line="  {{ item }} ,"
+    insertbefore='}'
+  with_items:
+    - "{{ bind_log_dir }}** lrw"
+    - "{{ bind_log_dir }} rw"
+  tags: apparmor
+
 - name: reload apparmor parser
   raw: apparmor_parser -r /etc/apparmor.d/usr.sbin.named
